# clog_collecter

./: .gitignore  README.md
Server/: CMakeLists.txt  README.md  Server.sln
Server/Tools/: gdb.sh  git.sh  gitmodules.sh  sync.sh
Server/ccommon/: ccommon.vcxproj  ccommon.vcxproj.filters
Server/clib/: casync_log.h  ccmd_param.h  cconfig.h  clib.vcxproj  clib.vcxproj.filters  clog.h  clog_color.h  cmsg_buffer.h  cnet_mgr.cpp  cnet_mgr.h  cnet_session.cpp  cnet_session.h  cnoncopytable.h  crandom.h  cregistry.cpp  cutil.cpp  cutil.h
Server/common/: CMakeLists.txt  build_version.h  cmsg_base_id.h  cmsg_dispatch.cpp  cmsg_dispatch.h  common.vcxproj  common.vcxproj.filters  cserver_cfg.cpp  cserver_cfg.h  cserver_msg_header.cpp  cserver_msg_header.h
Server/common_mysql/: common_mysql.vcxproj  common_mysql.vcxproj.filters
Server/linux/: start.sh  start_cloud_game.sh
Server/log/: casync_write_file.cpp  casync_write_file.h  ccfg.cpp  ccfg.h  cglobal_db.cpp  cglobal_db.h  cglobal_log_data_mgr.cpp  cglobal_log_data_mgr.h  cguard_reply.cpp  cguard_reply.h  clog_insert_base.h  clog_insert_data.cpp  clog_insert_data.h  clog_insert_mgr.cpp  clog_insert_mgr.h  cmsg_dispatch.cpp  crobot_msg_header.cpp  csession_handler.cpp  ctime_mgr.cpp  ctime_mgr.h  cwan_server.cpp  cwan_server.h  cwan_session.cpp  cwan_session.h  log.cpp  log.h  log.vcxproj  log.vcxproj.filters  main.cpp
Server/log_collector/: casync_log_queue.cpp  casync_log_queue.h  cclient.cpp  cclient.h  cclient_session.cpp  cclient_session.h  clog_collector.cpp  clog_collector.h  clog_collector_c.cpp  clog_collector_c.h  clog_collector_server.cpp  clog_collector_server.h  crobot_msg_header.h  csession_handler.cpp  log_collector.vcxproj  log_collector.vcxproj.filters  main.cpp
Server/log_collector_client/: log_collector_client.vcxproj  main.c  main.cpp
Server/res/: www_mklink.bat
(+67 files in other folders)
